ErrorHandleing and Ref

--- a/src/App.css
+++ b/src/App.css
@@ -66,3 +66,10 @@
   align-items: center;
   border: 1px solid #61dafb;
 }
+
+#h3 {
+  font-size: 26px;
+  font-family: "Roboto";
+  color: #1ecf59;
+
+}
